tests/miniJava/pos/001060_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) while ( 0 ) { } else java [ 0 ] = 0 ; } }
