tests/miniJava/neg/005189_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] while java ) { return 0 ; } }
